fix cloud button wrapping

--- a/src/mist/io/static/css/backend_add.css
+++ b/src/mist/io/static/css/backend_add.css
@@ -5,7 +5,7 @@
 
 #add-backend {
     width: 281px;
-    margin:  0 0 5px 0 !important;
+    margin:  0 0 6px 0 !important;
 }
 
 #add-backend-overlay {
